feat(auth): 添加管理端登录接口及基于用户ID查询角色功能
- 新增AuthClient接口方法queryRoleByUserId支持通过userId查询角色信息
- AuthTokensController新增管理端登录接口adminLoginByPw，参数改为LoginAdminFormDTO
- AuthTokensService及其实现类AuthTokensServiceImpl新增loginAdmin方法实现管理端登录校验及Token生成
- RolesService实现类新增queryRoleByUserId方法实现通过userId查询角色
- RoleController新增根据userId查询角色的接口
- UserController调整用户注册接口参数类型为UserRegisterDTO，删除部分废弃接口
- UserDTO新增多个用户属性字段，调整部分字段注释及约束
- UserProfiles调整为使用lombok注解和MyBatis-Plus注解
- FilesServiceImpl将文件上传方式由七牛云切换至SFTP，实现相关代码替换
- AvatarUtils更换默认头像链接地址
- 基础自动填充类BaseMetaObjectHandler及MyBatisAutoFillInterceptor完善创建和更新时间自动填充功能
- 清理删除七牛云配置及代码，新增共享消息队列和XXL-JOB配置
- MQ配置类MqConfig完善rabbitmq相关配置，增加错误队列和消息恢复机制
- 新增RabbitMQ依赖于auth-service和user模块pom.xml中
- RoleCache中注释掉角色名称缓存方法，改用用户DTO中的角色字段
- 常量类Constant中新增ROLE_GENERAL，消息队列相关常量详细划分子接口和新增用户相关交换机及路由键
- 代码格式和导入优化，删除未使用的代码和注释代码，调整异常抛出和日志输出方式